--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -30,7 +30,7 @@ body:
     attributes:
       label: Environment
       description: If relevant to the bug, please share details about your environment.
-      placeholder: |
+      value: |
         **Desktop (please complete the following information):**
 
         - OS: [e.g. iOS]
@@ -45,9 +45,18 @@ body:
         - Version: [e.g. 22]
     validations:
       required: false
-  - type: checkboxes
+  - type: textarea
+      attributes:
+        label: Description
+        description: Describe the issue that you're seeing.
+        placeholder: Be as precise as you can. Feel free to share screenshots, videos, or data from the devtools of your browser.
+      validations:
+        required: true
+  - type: textarea
     attributes:
       label: Want to contribute? 👋
-      description: Please check this if you'd like to work on this issue.
-      options:
-        - label: We love contributions from the Ethereum community! Please select this box or comment on an issue if you're interested in helping out with a PR.
+      description: Please leave a comment here if you'd like to work on this issue, otherwise leave as the default message.
+            value: |
+              We love contributions from the Ethereum community! Please comment on an issue if you're interested in helping out with a PR.
+      validations:
+        required: true
