--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -11,6 +11,13 @@ body:
       required: true
   - type: textarea
     attributes:
+      label: Not
+      description: Describe the issue that you're seeing.
+      placeholder: Be as precise as you can. Feel free to share screenshots, videos, or data from the devtools of your browser.
+    validations:
+      required: true
+  - type: textarea
+    attributes:
       label: Steps to Reproduce
       description: Clear steps describing how to reproduce the issue.
       value: |
