--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -45,8 +45,7 @@ body:
         - Version: [e.g. 22]
   - type: textarea
     attributes:
-      label: Not
-      description: Describe the issue that you're seeing.
-      placeholder: Be as precise as you can. Feel free to share screenshots, videos, or data from the devtools of your browser.
+      label: Want to contribute? 👋
+      description: Please leave a comment here if you'd like to work on this issue, otherwise leave as the default message.
     validations:
       required: true
