--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -47,5 +47,7 @@ body:
     attributes:
       label: Want to contribute? 👋
       description: Please leave a comment here if you'd like to work on this issue, otherwise leave as the default message.
+      value: |
+        We love contributions from the Ethereum community! Please comment on an issue if you're interested in helping out with a PR.
     validations:
       required: true
